--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <script src="script.js"></script>
 </head>
 <body>
-Hello World !
+<h1>Mathématiques</h1>
+  <h2>Sixième</h2>
+  <h2>Cinquième</h2>
+  <h2>Troisième</h2>
 </body>
 </html>
