--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>Titre de la page</title>
+  <title>Mathématiques</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
