--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Mathématiques</title>
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/luxacss@latest/dist/compressed/luxa.min.css"
-/>
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/yegor256/tacit@gh-pages/tacit-css-1.8.1.min.css"/>
+  </head>
 </head>
 <body>
 <h1>Mathématiques</h1>
